--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,20 +1,20 @@
+/*General Styling*/
+
 body{
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background-color: #eee;
-    color: #777777;
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
+    background-image: url(../images/performante.jpg);
+    /* background-color: rgb(238, 154, 44); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 html{
-    height: 50%;
-}
-
-header{
-    background-color: #fff;
-    border-color: #cccccc;
+    height: 100%;
 }
 
 .clearfix::after{
@@ -23,190 +23,175 @@ header{
     clear: both;
 }
 
-nav{
-    font-size: 1.1em;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 550;
-    float: right;
-    margin-right: 10%;
+.container{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+#me{
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+}
+
+header{
+    background-color:#666666;
+    padding: 0;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+}
+
+#siteTitle{
     margin-top: 0;
-    height: 65px
+    margin-bottom: 0;
+    font-size: 3em;
+}
+
+h1, h4{
+    text-align: center;
+    color: white;
+}
+
+#navBox{
+    text-align: center;
+}
+
+nav{
+    font-size: 1.5em;
 }
 
 nav ul{
+    margin-top: 0;
+    margin-bottom: 0;
     padding-left: 0;
-    margin-bottom: 29px;
 }
 
 nav ul li{
     list-style: none;
-    display: inline;
-    margin: 10px;
+    display: inline-block;
+    margin: 0 10px;
 }
 
 nav ul li a{
     text-decoration: none;
-    color: #777777;
-}
-
-h1{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-.name{
-    background-color: #4aaaa5;
     color: white;
-    z-index: 1;
-    text-align: center;
-    float: left;
-    margin-left: 10%;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 15px 20px 15px 20px;
-    text-align: center;
 }
 
-#container{
-    width: 80%;
-    min-height: 100%;
-    margin: 0 auto;
-    border: 1px solid #dddddd;
-    background-color: #fff;
-    margin-top: 40px;
-    margin-bottom: 70px;
+a:hover{
+    text-decoration: none;
+    color: burlywood;
+    transition: 0.3s;
 }
 
-.contentHead{
-    padding: 15px 10px 15px 0px;
-    width: 95%;
-    margin: 15px auto;
-    color: #4aaaa5;
-}
-
-.content{
-    width: 95%;
-    margin: 15px auto;
-    border-top: 1px solid black;
-    padding: 15px 10px 15px 0px;
-    overflow: auto;
-}
-
-#aboutMe{
-    color: #4aaaa5;
-}
-
-#allen{
-    width: 150px;
-    height: 170px;
-    float: left;
-    margin-right: 15px;
-}
-
-p{
-    margin-top: 0;
-    line-height: 1.5;
+#hello{
+    color: #000000;
 }
 
 footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
     background-color:#666666;
-    border-top: 8px solid #4aaaa5;
-    padding-top: 60px;
-    padding-bottom: 1px;
+    padding-top: 20px;
+    padding-bottom: 30px;
     height: 20px;
     color: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 0px;
+    opacity: 0.8;
+}
+
+#footerText{
+    margin: 0 auto;
+}
+
+/*Homepage Styling*/
+#summary{
+    background-color: burlywood;
+    width: 50%;
+    font-size: 0.9em;
+    font-weight: bold;
+    color: #000000;
+    opacity: 0.8;
+    margin: 0 auto;
+    margin-top: 5px;
+    box-shadow: 5px 10px 20px #ffffff;
+}
+
+#summary:hover{
+    transition: 0.5s;
+    opacity: 0.9;
 }
 
 /*Portfolio Styling*/
-
-.projectBox{
-    width: 33%;
-    height: 250px;
-    border: 1px solid black;
-    float: left;
-    margin: 15px 30px 25px 0;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.projectTitle{
+.content{
+    margin: 75px auto;
+    /* display: flex;
+    justify-content: center;
+    justify-content: space-evenly; */
     width: 100%;
-    height: 50px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    background-color: #4aaaa5;
+}
+.projectBox{
+    border: 1px solid black;
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
     text-align: center;
-    color: #ffffff;
-    position: relative;
-    margin: 150px 0 31px 0;
-    overflow: hidden;
+    float: left;
+    margin: 15px;
 }
 
-.projectTitle p{
-    margin-top: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.projectBox a p{
+    margin: 50px auto;
 }
-
-#box1{
-    background-image: url(../images/ipad.jpg);
-    background-repeat: no-repeat;
-}
-
-#box2{
-    background-image: url(https://media.giphy.com/media/l3q2RgN7WUjeUUXm0/giphy.gif);
-    background-repeat: no-repeat;
-}
-
-#box3{
-    background-image: url(../images/earphones.jpg);
-    background-repeat: no-repeat;
-}
-
-#box4{
-    background-image: url(../images/phone.jpg);
-    background-repeat: no-repeat;
-}
-
-#box5{
-    background-image: url(../images/tv.jpg);
-    
-}
-
-#box6{
-    background-image: url(../images/phone.jpg);
-    background-repeat: no-repeat;
-}
-
-a{
-    text-decoration-line: none;
-}
-
 /*Contact Styling*/
+form p{
+    margin-bottom: 0;
+    color: #ffffff;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-shadow: 2px 2px 8px #000000;
+}
 
 input{
+    background-color: burlywood;
     margin: 3px 0 15px 0;
-    width: 100%;
+    width: 50%;
     padding: 5px 0 5px 5px;
+    opacity: 0.9;
+
 }
 
 textarea{
     margin: 3px 0 15px 0;
-    width: 100%;
+    width: 70%;
     padding: 5px 0 5px 5px;
+    background-color: burlywood;
+    color: #000000;
+    /* background-color: transparent; */
+    opacity: 0.9;
+    box-shadow: 5px 10px 20px #777777;
 }
 
 #button{
-    background-color: #4aaaa5;
+    background-color: burlywood;
     padding: 5px 10px 5px 10px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #ffffff;
+    font-weight: bold;
+    color: #000000;
     width: 10%;
     text-align: center;
+    box-shadow: 5px 5px 20px #777777;
 }
 
+/*Media queries*/
 @media screen and (max-width: 980px){
     #container{
         width: 60%;
@@ -222,6 +207,17 @@ textarea{
 
     .projectBox{
         margin: 15px 30px 25px 50px;
+    }
+
+    #button{
+        background-color: burlywood;
+        padding: 5px 22px 5px 10px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        color: #000000;
+        width: 30%;
+        text-align: center;
+        box-shadow: 5px 5px 20px #777777;
     }
 }
 
@@ -251,6 +247,16 @@ textarea{
         display: inline-block;
         width: 300px;
         height: 250px;
+    }
+
+    #button{
+        background-color: burlywood;
+        padding: 5px 22px 5px 10px;
+        font-family: Arial, Helvetica, sans-serif;
+        color: #000000;
+        width: 15%;
+        text-align: center;
+        box-shadow: 5px 5px 20px #777777;
     }
 }
 
@@ -312,11 +318,12 @@ textarea{
     }
     
     #button{
-        background-color: #4aaaa5;
+        background-color: burlywood;
         padding: 5px 22px 5px 10px;
         font-family: Arial, Helvetica, sans-serif;
-        color: #ffffff;
-        width: 10%;
+        color: #000000;
+        width: 30%;
         text-align: center;
+        box-shadow: 5px 5px 20px #777777;
     }
 }
