--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@ body{
     overflow-x: hidden;
     font-family: Arial, Helvetica, sans-serif;
     height: 100%;
-    background-image: url(../images/performante.jpg);
+    background-image: url(../images/beach2.jpg);
     /* background-color: rgb(238, 154, 44); */
     background-repeat: no-repeat;
     background-size: cover;
@@ -122,7 +122,13 @@ footer{
     opacity: 0.8;
     margin: 0 auto;
     margin-top: 5px;
+    border-radius: 5px;
     box-shadow: 5px 10px 20px #ffffff;
+}
+
+#summary p{
+    margin: 0 auto;
+    padding-left: 5px;
 }
 
 #summary:hover{
@@ -139,18 +145,35 @@ footer{
     width: 100%;
 }
 .projectBox{
-    border: 1px solid black;
+    border: 1px solid burlywood;
     width: 150px;
     height: 150px;
     border-radius: 100%;
     text-align: center;
     float: left;
     margin: 15px;
+    background-color: burlywood;
+    opacity: 0.9;
+}
+
+.projectBox:hover{
+    transition: 0.5s;
+    background-color: #000000;
+    opacity: 0.8;
+    color: #000000;
 }
 
 .projectBox a p{
     margin: 50px auto;
+    color: #ffffff;
+    font-weight: bold;
 }
+
+.projectBox a p:hover{
+    transition: 0.5s;
+    color: burlywood;
+}
+
 /*Contact Styling*/
 form p{
     margin-bottom: 0;
@@ -185,7 +208,7 @@ textarea{
     padding: 5px 10px 5px 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    color: #000000;
+    color: #ffffff;
     width: 10%;
     text-align: center;
     box-shadow: 5px 5px 20px #777777;
